2003-11-21  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/makefile.msc: s/gimpfileselection/gimpfileentry/


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11555 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-11-21  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/makefile.msc: s/gimpfileselection/gimpfileentry/ 
+
+2003-11-21  Sven Neumann  <sven@gimp.org>
+
 	* modules/cdisplay_proof.c: use a table to align the widgets.
 
 2003-11-21  Sven Neumann  <sven@gimp.org>
