2003-11-22  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/tmpl/gimpcolordisplaystack.sgml: added docs for
	GimpColorDisplayStack.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11558 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-22  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/tmpl/gimpcolordisplaystack.sgml: added docs for
+	GimpColorDisplayStack.
+
 2003-11-21  Sven Neumann  <sven@gimp.org>
 
 	* app/app-sections.txt: updated.
