2003-11-22  Sven Neumann  <sven@gimp.org>
	* app/gui/preferences-dialog.c: let the templates editor expand.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11559 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-22  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/preferences-dialog.c: let the templates editor expand.
+
 2003-11-21  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpcolordisplaystack.h: forgot to declare
