--- a/NEWS
+++ b/NEWS
@@ -10,8 +10,10 @@ GIMP version 2.0.
 
 Overview of Changes in GIMP 1.3.23
 ==================================
+- Color proof display filter using ICC profiles written by Banlu Kemiyatorn
+- New gimprc options to work around window management problems [Sven, Brix]
 - Fixes for using GIMP on Xinerama setups [Sven]
-- A couple of libgimp* API cleanups [Mitch, Sven]
+- Numerous libgimp* API cleanups [Mitch, Sven]
 - Theme switching in the preferences dialog [Mitch]
 - Added a small theme [Mitch]
 - Cleanup and unification of message strings [Mitch]
@@ -20,6 +22,7 @@ Overview of Changes in GIMP 1.3.23
 - GimpCanvas drawing abstraction [Sven]
 - Added DICOM file plug-in by Dov Grobgeld
 - Imported new WMF plug-in from libwmf2 [Sven, Mitch]
+- A session name can be given on the command-line [Sven]
 - Allow to move image windows and docks between screens [Mitch, Sven] 
 - Fixed multi-head issues [Mitch]
 - Allow to merge visible paths [Simon]
