--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-22  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2003-11-21  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
 
 	* sk.po: Updated Slovak translation.
