--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-22  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimpwidgets.def: added symbols for
+	GimpColorDisplayStack.
+
+2003-11-22  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpdnd.c (gimp_dnd_get_file_data): when constructing
 	an URI list, don't add a newline character after the last item.
 
