--- a/NEWS
+++ b/NEWS
@@ -35,7 +35,7 @@ Other contributors:
   Ville Pätsi, Eric Pierce, Tor Lillqvist, Henrik Brix Andersen,
   Manish Singh, Dom Lachowicz, Francis James Franklin, Dave Neary,
   Maurits Rijk, Joao S. O. Bueno, Michael Schumacher, Daniel Rogers,
-  Hans Breuer
+  Hans Breuer, Jakub Steiner
 
 
 Overview of Changes in GIMP 1.3.22
