2003-11-22  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets-docs.sgml
	* libgimpwidgets.types: added it here too.

	* libgimpwidgets/tmpl/gimpcolordisplaystack.sgml: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11570 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-22  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets-docs.sgml
+	* libgimpwidgets.types: added it here too.
+
+	* libgimpwidgets/tmpl/gimpcolordisplaystack.sgml: updated.
+
 2003-11-22  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/libgimpwidgets-sections.txt
