2003-11-22 Henrik Brix Andersen <brix@gimp.org>
* gimp/app/core/gimpimage-snap.c: behave correctly for grid
spacing of 1px, whitespace clean up. Fixes the grid part of bug
#125864.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11573 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-22  Henrik Brix Andersen  <brix@gimp.org>
+
+	* gimp/app/core/gimpimage-snap.c: behave correctly for grid
+	spacing of 1px, whitespace clean up. Fixes the grid part of bug
+	#125864.
+
 2003-11-23  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpcolordisplay.[ch]: added API to
