2003-11-23  Danilo Å egan  <dsegan@gmx.net>
	* po-plug-ins/sr.po, po-plug-ins/sr@Latn.po: Updated Serbian
	translation by Branko Ivanovic from Prevod.org team.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11574 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-23  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation by Branko
+	Ivanovic from Prevod.org team.
+
 2003-11-22  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
