--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-11-23  Raphaël Quinet  <quinet@gamers.org>
+
+	* plug-ins/common/animoptimize.c: Allow the plug-in to register
+	itself twice: once for the old mode (difference only) and once for
+	the new mode that improves the 'combine' frames by trying to
+	maximize the number of adjacent pixels of the same color.  This
+	gives a better compression for GIF, MNG and other formats that
+	work on a line-by-line basis (bug #66367).
+
 2003-11-22  Henrik Brix Andersen  <brix@gimp.org>
 
 	* gimp/app/core/gimpimage-snap.c: behave correctly for grid
