2003-11-23  Michael Natterer  <mitch@gimp.org>
	* app/app-docs.sgml
	* app/app-sections.txt
	* app/app.types: added GimpColorDisplayEditor, updates.

	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/tmpl/gimpcolordisplay.sgml: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11576 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,12 @@
+2003-11-23  Michael Natterer  <mitch@gimp.org>
+
+	* app/app-docs.sgml
+	* app/app-sections.txt
+	* app/app.types: added GimpColorDisplayEditor, updates.
+
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/tmpl/gimpcolordisplay.sgml: updated.
+
 2003-11-22  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets-docs.sgml
