2003-11-23  Michael Natterer  <mitch@convergence.de>
	* libgimpwidgets/gimpcolordisplay.c (gimp_color_display_clone):
	also clone the "enabled" property.

	* app/widgets/gimpcolordisplayeditor.c
	(gimp_color_display_editor_init): put the "enabled" toggle
	renderer to its own column so selecting a row doesn't always
	toggle "enabled".


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11577 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2003-11-23  Michael Natterer  <mitch@convergence.de>
+
+	* libgimpwidgets/gimpcolordisplay.c (gimp_color_display_clone):
+	also clone the "enabled" property.
+
+	* app/widgets/gimpcolordisplayeditor.c
+	(gimp_color_display_editor_init): put the "enabled" toggle
+	renderer to its own column so selecting a row doesn't always
+	toggle "enabled".
+
 2003-11-23  Raphaël Quinet  <quinet@gamers.org>
 
 	* plug-ins/common/animoptimize.c: Allow the plug-in to register
