2003-11-23  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimpcolordisplay.[ch]: made "enabled" an object
	property and removed the "enabled_changed" signal.

	* libgimpwidgets/gimpcolordisplaystack.c
	* app/widgets/gimpcolordisplayeditor.c: connect to "notify::enabled"
	instead.

	* libgimpwidgets/gimpwidgets.def: added new symbols.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11579 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2003-11-23  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpcolordisplay.[ch]: made "enabled" an object
+	property and removed the "enabled_changed" signal.
+
+	* libgimpwidgets/gimpcolordisplaystack.c
+	* app/widgets/gimpcolordisplayeditor.c: connect to "notify::enabled"
+	instead.
+
+	* libgimpwidgets/gimpwidgets.def: added new symbols.
+
 2003-11-23  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpcolordisplay.[ch]: added new signal
