2003-11-23  Sven Neumann  <sven@gimp.org>
	* libgimpbase/gimpdatafiles.[ch]
	* libgimpbase/gimpenv.[ch]
	* libgimpbase/gimputils.c
	* libgimpmodule/gimpmodule.[ch]
	* libgimpmodule/gimpmoduledb.[ch]: use proper LibGIMP headers.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11582 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-23  Sven Neumann  <sven@gimp.org>
 
+	* libgimpbase/gimpdatafiles.[ch]
+	* libgimpbase/gimpenv.[ch]
+	* libgimpbase/gimputils.c
+	* libgimpmodule/gimpmodule.[ch]
+	* libgimpmodule/gimpmoduledb.[ch]
 	* libgimpwidgets/gimpcolordisplay.[ch]
 	* libgimpwidgets/gimpcolordisplaystack.[ch]
 	* libgimpwidgets/gimpcolorselection.[ch]
