2003-11-23  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimpwidgets.def: symbols changes by a patch from
	Michael Schumacher.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11583 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-23  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimpwidgets.def: symbols changes by a patch from
+	Michael Schumacher.
+
+2003-11-23  Sven Neumann  <sven@gimp.org>
+
 	* libgimpbase/gimpdatafiles.[ch]
 	* libgimpbase/gimpenv.[ch]
 	* libgimpbase/gimputils.c
