--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-23  Sven Neumann  <sven@gimp.org>
+
+	* it.po: fixed a fatal error in the italian translation.
+
 2003-11-23  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: Updated italian translation
