--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-24  Ville Pätsi  <drc@gimp.org>
+
+	* gimp.spec.in: Added depedency for lcms
+
 2003-11-23  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimpwidgets.def: symbols changes by a patch from
