2003-11-24  Michael Natterer  <mitch@gimp.org>
	* app/display/gimpdisplayshell-layer-select.c
	* app/widgets/gimptoolbox-indicator-area.c: use
	gimp_preview_new_by_types() instead of just gimp_preview_new() so
	the new preview code remembers the correct GType.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11587 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-24  Michael Natterer  <mitch@gimp.org>
+
+	* app/display/gimpdisplayshell-layer-select.c
+	* app/widgets/gimptoolbox-indicator-area.c: use
+	gimp_preview_new_by_types() instead of just gimp_preview_new() so
+	the new preview code remembers the correct GType.
+
 2003-11-24  Ville Pätsi  <drc@gimp.org>
 
 	* gimp.spec.in: Added depedency for lcms
