--- a/po-libgimp/sr@Latn.po
+++ b/po-libgimp/sr@Latn.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp-libgimp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-11-24 01:38+0100\n"
-"PO-Revision-Date: 2003-11-16 01:36+0100\n"
+"POT-Creation-Date: 2003-11-24 03:25+0100\n"
+"PO-Revision-Date: 2003-11-24 03:28+0100\n"
 "Last-Translator: Dejan Matijević <dejan@ns.sympatico.ca>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -402,11 +402,11 @@ msgstr "Heksadekadna _trojka:"
 
 #: libgimpwidgets/gimpcolorselection.c:203
 msgid "Current:"
-msgstr ""
+msgstr "Tekuće:"
 
 #: libgimpwidgets/gimpcolorselection.c:225
 msgid "Old:"
-msgstr ""
+msgstr "Staro:"
 
 #: libgimpwidgets/gimpfileentry.c:331
 msgid "Select Folder"
@@ -541,21 +541,20 @@ msgid "Color Deficient Vision"
 msgstr "Pogled oskudnih boja"
 
 #: modules/cdisplay_colorblind.c:464
-#, fuzzy
 msgid "Color _Deficiency Type:"
-msgstr "Vrsta oskudnosti boje:"
+msgstr "Vrsta _oštećenja boje:"
 
 #: modules/cdisplay_colorblind.c:473
 msgid "Protanopia (insensitivity to red)"
-msgstr "Protanopia (neosetnjivost na crveno)"
+msgstr "Protanopia (neosetljivost na crveno)"
 
 #: modules/cdisplay_colorblind.c:476
 msgid "Deuteranopia (insensitivity to green)"
-msgstr "Deuteranopia (neosetnjivost na zeleno)"
+msgstr "Deuteranopija (neosetljivost na zeleno)"
 
 #: modules/cdisplay_colorblind.c:479
 msgid "Tritanopia (insensitivity to blue)"
-msgstr "Tiranopia (neosetnjivost na plavo)"
+msgstr "Tiranopia (neosetljivost na plavo)"
 
 #: modules/cdisplay_gamma.c:90
 msgid "Gamma color display filter"
@@ -566,9 +565,8 @@ msgid "Gamma"
 msgstr "Gama"
 
 #: modules/cdisplay_gamma.c:311
-#, fuzzy
 msgid "_Gamma:"
-msgstr "Gama:"
+msgstr "_Gama:"
 
 #: modules/cdisplay_highcontrast.c:90
 msgid "High Contrast color display filter"
@@ -579,45 +577,46 @@ msgid "Contrast"
 msgstr "Kontrast"
 
 #: modules/cdisplay_highcontrast.c:308
-#, fuzzy
 msgid "Contrast C_ycles:"
-msgstr "Kontrast ciklus:"
+msgstr "_Ciklusi kontrasta:"
 
 #: modules/cdisplay_proof.c:102
 msgid "Color proof filter using ICC color profile"
-msgstr ""
+msgstr "Filter probe u boji koji koristi ICC profil boja"
 
 #: modules/cdisplay_proof.c:166
 msgid "Color Proof"
-msgstr ""
+msgstr "Proba u boji"
 
 #: modules/cdisplay_proof.c:319
 msgid "Perceptual"
-msgstr ""
+msgstr "Čulno"
 
+# loše
 #: modules/cdisplay_proof.c:321
 msgid "Relative Colorimetric"
-msgstr ""
+msgstr "Relativno kolorimetrijski"
 
+# gadno
 #: modules/cdisplay_proof.c:325
 msgid "Absolute Colorimetric"
-msgstr ""
+msgstr "Apsolutno kolorimetrijski"
 
 #: modules/cdisplay_proof.c:331
 msgid "_Intent:"
-msgstr ""
+msgstr "_Namera:"
 
 #: modules/cdisplay_proof.c:334
 msgid "Choose an ICC Color Profile"
-msgstr ""
+msgstr "Izaberite ICC profil boja"
 
 #: modules/cdisplay_proof.c:337
 msgid "_Profile:"
-msgstr ""
+msgstr "_Profil:"
 
 #: modules/cdisplay_proof.c:345
 msgid "_Black Point Compensation"
-msgstr ""
+msgstr "Zamena za _crnu tačku"
 
 #: modules/colorsel_cmyk.c:73
 msgid "CMYK color selector"
