--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-24  Marco Ciampa  <ciampix@libero.it>
+
+	*  it.po: Updated italian translation.
+	
 2003-11-22  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
