--- a/po/it.po
+++ b/po/it.po
@@ -1883,7 +1883,7 @@ msgstr ""
 
 #: app/core/gimpimage-merge.c:138
 msgid "Flatten Image"
-msgstr "Immagine Appiattita"
+msgstr "Appiattisci immagine"
 
 #: app/core/gimpimage-merge.c:187
 msgid "Merge Down"
