Updated italian translation.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11595 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-24  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: added italian translation.
+	* Makefile.am: added it.po.
+	* gimp_tips.it.txt: removed.
+
 2003-11-21  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
 
 	* sk.po: Updated Slovak translation by Zdenko Podobny.
