--- a/po-libgimp/es.po
+++ b/po-libgimp/es.po
@@ -2,21 +2,22 @@
 # Copyright © 1998-2000,2003 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gimp package.
 # Rodrigo Sancho Senosiain <ruy_ikari@bigfoot.com>
-# Francisco Javier Fernandez <serrador@arrakis.es>, 2003
+# Francisco Javier Fernandez <serrador@arrakis.es>, 2003.
+# Pablo G. del Campo <pablodc@bigfoot.com>, 2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gimp-libgimp 1.3.X\n"
+"Project-Id-Version: gimp-libgimp.HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-11-24 01:38+0100\n"
-"PO-Revision-Date: 2003-07-25 10:51-0300\n"
+"POT-Creation-Date: 2003-11-24 03:41+0100\n"
+"PO-Revision-Date: 2003-11-24 10:25-0300\n"
 "Last-Translator: Pablo G. del Campo <pablodc@bigfoot.com>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "\n"
-"X-Generator: KBabel 1.0\n"
+"X-Generator: KBabel 1.0.2\n"
 
 #: libgimp/gimpbrushmenu.c:132
 msgid "Brush Selection"
@@ -24,7 +25,7 @@ msgstr "Selección de brocha"
 
 #: libgimp/gimpbrushmenu.c:161 libgimp/gimppatternmenu.c:144
 msgid "_Browse..."
-msgstr ""
+msgstr "_Buscar..."
 
 #: libgimp/gimpexport.c:215 libgimp/gimpexport.c:251
 #, c-format
@@ -59,13 +60,13 @@ msgid "%s can't handle transparency"
 msgstr "%s no puede manejar transparencia"
 
 #: libgimp/gimpexport.c:269
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layer masks"
-msgstr "%s no puede manejar capas"
+msgstr "%s no puede manejar máscaras de capas"
 
 #: libgimp/gimpexport.c:270
 msgid "Apply Layer Masks"
-msgstr ""
+msgstr "Aplicar las mascaras de capa"
 
 #: libgimp/gimpexport.c:278
 #, c-format
@@ -99,17 +100,16 @@ msgstr ""
 "(Hágalo manualmente para afinar el resultado)"
 
 #: libgimp/gimpexport.c:306
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle bitmap (two color) indexed images"
-msgstr "%s sólo puede manejar imágenes RGB o indexadas"
+msgstr "%s sólo puede manejar imágenes de mapas de bits (de dos colores) o indexadas"
 
 #: libgimp/gimpexport.c:307
-#, fuzzy
 msgid ""
 "Convert to Indexed using bitmap default settings\n"
 "(Do it manually to tune the result)"
 msgstr ""
-"Convertir a indexada usando ajustes predefinidos\n"
+"Convertir a indexada usando ajustes predefinidos de mapa de bits\n"
 "(Hágalo manualmente para afinar el resultado)"
 
 #: libgimp/gimpexport.c:316
@@ -149,23 +149,21 @@ msgid "Export File"
 msgstr "Exportar archivo"
 
 #: libgimp/gimpexport.c:460
-#, fuzzy
 msgid "_Ignore"
-msgstr "Ignorar"
+msgstr "_Ignorar"
 
 #: libgimp/gimpexport.c:462
-#, fuzzy
 msgid "_Export"
-msgstr "Exportar"
+msgstr "_Exportar"
 
 #. the headline
 #: libgimp/gimpexport.c:484
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Your image should be exported before it can be saved as %s for the following "
 "reasons:"
 msgstr ""
-"Su imagen debería ser exportada antes de que pueda guardarse por las "
+"Su imagen debería ser exportada antes de que pueda guardarse como «%s» por las "
 "siguientes razones:"
 
 #: libgimp/gimpexport.c:562
@@ -220,9 +218,8 @@ msgstr ""
 "a su archivo %s"
 
 #: libgimp/gimpmiscui.c:556
-#, fuzzy
 msgid "Parameter Settings"
-msgstr "Selección de patrón"
+msgstr "Configuración de los parámetros"
 
 #: libgimp/gimppatternmenu.c:115
 msgid "Pattern Selection"
@@ -234,7 +231,7 @@ msgstr "porcentaje"
 
 #: libgimpbase/gimputils.c:161 libgimpbase/gimputils.c:166
 msgid "(invalid UTF-8 string)"
-msgstr ""
+msgstr "(cadena UTF-8 inválida)"
 
 #: libgimpbase/gimputils.c:198
 #, c-format
@@ -267,24 +264,24 @@ msgid "%.1f MB"
 msgstr "%.1f MB"
 
 #: libgimpbase/gimputils.c:226
-#, fuzzy, c-format
+#, c-format
 msgid "%d MB"
-msgstr "%d KB"
+msgstr "%d MB"
 
 #: libgimpbase/gimputils.c:233
-#, fuzzy, c-format
+#, c-format
 msgid "%.2f GB"
-msgstr "%.2f MB"
+msgstr "%.2f GB"
 
 #: libgimpbase/gimputils.c:237
-#, fuzzy, c-format
+#, c-format
 msgid "%.1f GB"
-msgstr "%.1f MB"
+msgstr "%.1f GB"
 
 #: libgimpbase/gimputils.c:241
-#, fuzzy, c-format
+#, c-format
 msgid "%d GB"
-msgstr "%d KB"
+msgstr "%d GB"
 
 #: libgimpmodule/gimpmodule.c:175
 #, c-format
@@ -294,11 +291,9 @@ msgstr "Cargando módulo «%s»\n"
 #: libgimpmodule/gimpmodule.c:191 libgimpmodule/gimpmodule.c:208
 #: libgimpmodule/gimpmodule.c:315 libgimpmodule/gimpmodule.c:342
 #: libgimpmodule/gimpmodule.c:435
-#, fuzzy, c-format
+#, c-format
 msgid "Module '%s' load error: %s"
-msgstr ""
-"Error en la carga del módulo «%s» \n"
-"%s"
+msgstr "Error en la carga del módulo «%s»: %s"
 
 #: libgimpmodule/gimpmodule.c:272
 #, c-format
@@ -322,24 +317,20 @@ msgid "Not loaded"
 msgstr "No cargado"
 
 #: libgimpwidgets/gimpcolorbutton.c:93
-#, fuzzy
 msgid "/_Foreground Color"
-msgstr "/Color frontal"
+msgstr "/Color de _frente"
 
 #: libgimpwidgets/gimpcolorbutton.c:95
-#, fuzzy
 msgid "/_Background Color"
-msgstr "/Color de fondo"
+msgstr "/Color de f_ondo"
 
 #: libgimpwidgets/gimpcolorbutton.c:98
-#, fuzzy
 msgid "/Blac_k"
-msgstr "/Negro"
+msgstr "/Ne_gro"
 
 #: libgimpwidgets/gimpcolorbutton.c:100
-#, fuzzy
 msgid "/_White"
-msgstr "/Blanco"
+msgstr "/_Blanco"
 
 #: libgimpwidgets/gimpcolorscales.c:142
 msgid "Scales"
@@ -412,11 +403,11 @@ msgstr "Triplete He_x:"
 
 #: libgimpwidgets/gimpcolorselection.c:203
 msgid "Current:"
-msgstr ""
+msgstr "Actual:"
 
 #: libgimpwidgets/gimpcolorselection.c:225
 msgid "Old:"
-msgstr ""
+msgstr "Anterior:"
 
 #: libgimpwidgets/gimpfileentry.c:331
 msgid "Select Folder"
@@ -555,9 +546,8 @@ msgid "Color Deficient Vision"
 msgstr "Color de visión deficiente"
 
 #: modules/cdisplay_colorblind.c:464
-#, fuzzy
 msgid "Color _Deficiency Type:"
-msgstr "Tipo de deficiencia del color:"
+msgstr "Tipo de _deficiencia del color:"
 
 #: modules/cdisplay_colorblind.c:473
 msgid "Protanopia (insensitivity to red)"
@@ -580,9 +570,8 @@ msgid "Gamma"
 msgstr "Gamma"
 
 #: modules/cdisplay_gamma.c:311
-#, fuzzy
 msgid "_Gamma:"
-msgstr "Gamma:"
+msgstr "_Gamma:"
 
 #: modules/cdisplay_highcontrast.c:90
 msgid "High Contrast color display filter"
@@ -593,45 +582,44 @@ msgid "Contrast"
 msgstr "Contraste"
 
 #: modules/cdisplay_highcontrast.c:308
-#, fuzzy
 msgid "Contrast C_ycles:"
-msgstr "Ciclos de contraste:"
+msgstr "C_iclos de contraste:"
 
 #: modules/cdisplay_proof.c:102
 msgid "Color proof filter using ICC color profile"
-msgstr ""
+msgstr "Filtro de color seguro usando el perfil de color ICC"
 
 #: modules/cdisplay_proof.c:166
 msgid "Color Proof"
-msgstr ""
+msgstr "Color seguro"
 
 #: modules/cdisplay_proof.c:319
 msgid "Perceptual"
-msgstr ""
+msgstr "Perceptible"
 
 #: modules/cdisplay_proof.c:321
 msgid "Relative Colorimetric"
-msgstr ""
+msgstr "Métrica de color relativa"
 
 #: modules/cdisplay_proof.c:325
 msgid "Absolute Colorimetric"
-msgstr ""
+msgstr "Métrica de color absoluta"
 
 #: modules/cdisplay_proof.c:331
 msgid "_Intent:"
-msgstr ""
+msgstr "_Objetivo:"
 
 #: modules/cdisplay_proof.c:334
 msgid "Choose an ICC Color Profile"
-msgstr ""
+msgstr "Seleccione un perfil de color ICC"
 
 #: modules/cdisplay_proof.c:337
 msgid "_Profile:"
-msgstr ""
+msgstr "_Perfil:"
 
 #: modules/cdisplay_proof.c:345
 msgid "_Black Point Compensation"
-msgstr ""
+msgstr "Compensación de punto _negro:"
 
 #: modules/colorsel_cmyk.c:73
 msgid "CMYK color selector"
@@ -734,3 +722,4 @@ msgstr "Presión"
 
 #~ msgid "OK"
 #~ msgstr "Aceptar"
+
