2003-11-24  Ville PÃ¤tsi  <drc@gimp.org>
        * gimp.spec.in: Fixed path creation typo.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11599 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-24  Ville Pätsi  <drc@gimp.org>
+
+	* gimp.spec.in: Fixed path creation typo.
+
 2003-11-24  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpdisplayshell.c (gimp_display_shell_destroy):
